# idontwanttolearncmake

./: .gitignore  CMakeLists.txt  README.md
executables/: CMakeLists.txt
executables/exampleExe/: CMakeLists.txt  depends
executables/exampleExe/exampleExe/: main.cpp
libraries/: CMakeLists.txt
libraries/exampleLib/: CMakeLists.txt
libraries/exampleLib/exampleLib/: ExampleLibClass.cpp  ExampleLibClass.h
