
file(GLOB IDWTLC_LIBRARY_LIST LIST_DIRECTORIES true CONFIGURE_DEPENDS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *)
set(IDWTLC_LIBRARIES )
foreach (IDWTLC_LIB IN LISTS IDWTLC_LIBRARY_LIST)
    if (IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${IDWTLC_LIB})
        message("Found library: ${IDWTLC_LIB}")
        add_subdirectory(${IDWTLC_LIB})
        list(APPEND IDWTLC_LIBRARIES ${IDWTLC_LIB})
    endif ()
endforeach ()

set(IDWTLC_LIBRARIES ${IDWTLC_LIBRARIES} PARENT_SCOPE)


